chore: prepare 2.1.0 release